# things-cli

./: .gitignore  AGENT_OPTIMIZATION.md  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_INTEGRATION.md  COMPARISON.md  Cargo.toml  LICENSE  PLAN.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
e2e/: README.md  lib.sh  run_all.sh  test_all.sh  test_area.sh  test_basic.sh  test_batch.sh  test_project.sh  test_show.sh  test_todo.sh
scripts/: release.sh
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: area.rs  batch.rs  config.rs  list.rs  mod.rs  project.rs  show.rs  todo.rs
src/config/: mod.rs  store.rs
src/core/: applescript.rs  executor.rs  mod.rs  models.rs  parser.rs  url_builder.rs
src/db/: mod.rs  models.rs  queries.rs  store.rs
tests/: integration_tests.rs
things-url-scheme-docs/: README.md  original.html
